# ImtiazGermain

./: Cargo.toml  README.md  index.html  objects.inv  setup.py
ImtiazGermain/: __init__.py  primecheck.py
docs/: api_reference.rst  conf.py  contributing.rst  index.rst  installation.rst
src/: lib.rs
src/primecheck/: isgermainprime.rs  isimtiazgermainprime.rs  mod.rs
tests/: test_primecheck.py
